2002-07-30  David Hyatt  <hyatt@apple.com>

	Backing myself out again.  No crashes, but now pages stall.
	#*^&*#@^%*&!!!!
	
        * khtml/rendering/render_table.cpp:
        (RenderTable::recalcColInfo):
        (RenderTable::addColInfo):

2002-07-30  David Hyatt  <hyatt@apple.com>

	Putting my table patch back in.  Also optimizing the code
	to avoid deleting and recreating the same colinfo over
	and over again.  Now colinfos can recalc their own
	information.
	
        * khtml/rendering/render_table.cpp:
        (RenderTable::addColumns):
        (RenderTable::recalcColInfo):
        (RenderTable::addColInfo):
        (RenderTable::calcMinMaxWidth):
        * khtml/rendering/render_table.h:

2002-07-30  Richard Williamson (local)  <rjw@apple.com>

        Inline critical function.
        
        * kwq/KWQString.mm:
        (compareToLatinCharacter):

2002-07-30  Richard Williamson  <rjw@apple.com>

        Wow!  Avoid creation of unicode string when only a single character
        is needed.  Simple change for big gains, 7% - 10% improvement
        on cached pages.  Other similar gains may remain to be had.
        
        * khtml/css/cssparser.cpp:

2002-07-30  Darin Adler  <darin@apple.com>

        * khtml/css/makevalues: Fail if we don't find gperf.

2002-07-30  David Hyatt  <hyatt@apple.com>

	Back myself out. I seem to have stumbled onto another bug.
	Until I figure it out, turn this back off.
	
        * khtml/rendering/render_table.cpp:
        (RenderTable::addColumns):
        (RenderTable::addColInfo):

2002-07-30  David Hyatt  <hyatt@apple.com>

	Fix for 3000604, 2902173, 2921313.  Ensure that tables recalc their
	column widths like they are supposed to.  This fixes livepage.apple.com,
	applemuseum.com, and many other pages (that didn't have bugs filed).
	Yay!
	
        * khtml/rendering/render_table.cpp:
        (RenderTable::recalcColInfo):
        (RenderTable::addColInfo):

2002-07-29  David Hyatt  <hyatt@apple.com>
